--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.booni.go">
+    package="co.go_app.app">
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
