--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
-
 android {
     compileSdkVersion 24
     buildToolsVersion "25.0.1"
     defaultConfig {
         applicationId "co.go_app.app"
-        minSdkVersion 19
+        minSdkVersion 17
         targetSdkVersion 24
+        multiDexEnabled = false
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -24,11 +24,25 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.google.android.gms:play-services:10.0.1'
+
     compile 'com.sothree.slidinguppanel:library:3.3.1'
+
+
+
+    compile 'com.google.android.gms:play-services-maps:10.0.1'
+    compile 'com.google.android.gms:play-services-location:10.0.1'
+    compile 'com.google.maps.android:android-maps-utils:0.4+'
+
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+
     compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.firebaseui:firebase-ui-auth:1.0.1'
     testCompile 'junit:junit:4.12'
+
 }
+
 
 apply plugin: 'com.google.gms.google-services'
