--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,8 +41,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NewChallengeActivity" />
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".NewChallengeActivity"/>
+        <activity android:name=".LoginActivity"/>
     </application>
 
 </manifest>
