--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
 
     compile 'com.sothree.slidinguppanel:library:3.3.1'
 
-
+    compile 'com.firebase:geofire-android:2.1.1'
 
     compile 'com.google.android.gms:play-services-maps:10.0.1'
     compile 'com.google.android.gms:play-services-location:10.0.1'
